# file-search

./: .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.in  README  README.md  aclocal.m4  config.h  config.status  configure  configure.ac  libtool
autom4te.cache/: output.0  output.2  requests  traces.0  traces.1  traces.2
lib/argp/: INSTALL_RECEIPT.json
scripts/: install.sh
src/: Makefile  Makefile.am  Makefile.in  filesearch  filesearch.c  filesearch.h  main  main.c
src/.deps/: filesearch.Plo  main.Po
src/.libs/: filesearch  libfilesearch.lai  main
tests/: Makefile  Makefile.am  Makefile.in  check_filesearch  check_filesearch.c
tests/.deps/: check_filesearch-check_filesearch.Po
tests/.libs/: check_filesearch
